--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<HTML><head><link rel="stylesheet" href="/style.css"><title>Main page</title></head><body><h1>Title</h1></body></HTML>
+<!DOCTYPE HTML><HTML><head><meta charset="utf-8"><link rel="stylesheet" href="/style.css"><title>Main page</title></head><body><h1>Title</h1></body></HTML>
